--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ spring.datasource.username=root
 spring.datasource.password=457895Mp@
 
 
+
 spring.jpa.show-sql=true
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+spring.jackson.date-format=yyyy-MM-dd
+
+spring.profiles.active=basic-security
