--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost/moneyapi?createDatabaseIfNotExist=true&useSSL=false&useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=457895Mp@
+spring.datasource.password=toor
 
 
 
